// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Input Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-bPyhqo dWxQcS"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kZzThM"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 jDoemc sc-jfmDQi bMvozQ sc-eKszNL hCjBDB"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-bPyhqo dWxQcS"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kZzThM"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 jDoemc sc-jfmDQi jrWTtX sc-eKszNL hCjBDB"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input Monospace 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-bPyhqo dWxQcS"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kZzThM"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 jDoemc sc-jfmDQi fzTSoF sc-eKszNL hCjBDB"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input With Placeholder 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-bPyhqo dWxQcS"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kZzThM"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 jDoemc sc-jfmDQi bMvozQ sc-eKszNL hCjBDB"
        placeholder="This is a placeholder"
        value=""
      />
    </div>
  </div>
</div>
`;
